# RETO-Multivariados

./: 1. Preprocesamiento.ipynb  2. EDA.ipynb  2. EDA_Norte.ipynb  2. EDA_Sureste.ipynb  Cell output 11(2) [DW].csv  EDA.ipynb  README.md  main.py  pyproject.toml  requirements.txt
data/: DATOS HISTÓRICOS 2020_2021_TODAS ESTACIONES.csv  DATOS HISTÓRICOS 2024_TODAS ESTACIONES.csv
data/interim/: datos_limpios_2022.csv  datos_limpios_2023.csv  datos_limpios_2024.csv  datos_limpios_2025.csv
data/processed/: data_centro.csv  data_norte.csv  data_sureste.csv
data/raw/: DATOS HISTÓRICOS 2020_Contaminante.csv  DATOS HISTÓRICOS 2022_2023_TODAS ESTACIONES.csv  DATOS HISTÓRICOS 2025_TODAS ESTACIONES.csv
data/raw/sima_data/: CENTRO_conc_20251118_002930.json  CENTRO_conc_20251118_011506.json  CENTRO_conc_20251118_021506.json  CENTRO_conc_20251118_031520.json  CENTRO_conc_20251118_041506.json  CENTRO_conc_20251118_051536.json  CENTRO_conc_20251118_061525.json  CENTRO_conc_20251118_071508.json  CENTRO_conc_20251118_081502.json  CENTRO_conc_20251118_091515.json  CENTRO_conc_20251118_101526.json  CENTRO_conc_20251118_111526.json  CENTRO_conc_20251118_121526.json  CENTRO_conc_20251118_131536.json  CENTRO_conc_20251118_141501.json  CENTRO_conc_20251118_151501.json  CENTRO_conc_20251118_161503.json  CENTRO_conc_20251118_171504.json  CENTRO_conc_20251118_181505.json  CENTRO_conc_20251118_191506.json  CENTRO_conc_20251118_201506.json  CENTRO_conc_20251118_211506.json  CENTRO_conc_20251118_221509.json  CENTRO_conc_20251118_231510.json  (+772 more)
notebooks/: 1. Preprocesamiento.ipynb
(+1560 files in other folders)
